tests/internal/cpp/negative_case/bad_lvalue_ref_bind_rvalue.cpp
int main() {
  int& ref = 1;
  return ref;
}
